--- a/Online-Portfolio.html
+++ b/Online-Portfolio.html
@@ -6,5 +6,26 @@
     </head>
     <body>
         <h1>Index</h1>
+        <hr>
+        <table>
+            <caption>Navigation</caption>
+            <tr>
+                <td>About Me</td>
+            </tr>
+            <tr>
+                <td>Projects</td>
+            </tr>
+            <tr>
+                <td>Resume</td>
+            </tr>
+            <tr>
+                <td>Recommendations</td>
+            </tr>
+        </table>
     </body>
+    <hr>
+    <footer>
+        <a href = "mailto: thulten2@gmail.com">Send Mail</a>
+        <p>Created by Tyler Hultēn</p>
+    </footer>
 </html>
